[project]
name = "buybuy"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "jacky2256", email = "a.bojic22@gmail.com"},
]
dependencies = ["django>=5.2.2", "django-easy-audit>=1.3.7"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "Apache-2.0"}


[tool.pdm]
distribution = false
